--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -35,7 +35,7 @@ footer {
             align-items: center;
             
             @include lg{
-                margin-left: -270px;
+                margin-left: -60%;
             }
 
         }
@@ -62,7 +62,7 @@ grid-area: f4;
 grid-area: f5;
 text-align: right;
 @include lg{
-    margin-left: -270px;
+    margin-left: -60%;
     text-align: left;
 }
     }
