--- a/dev/scss/sections/_cards.scss
+++ b/dev/scss/sections/_cards.scss
@@ -16,17 +16,25 @@
             "hc3, hc4"
         ;
     }
-    #hc1{
+
+    #hc1 {
         grid-area: hc1;
     }
-    #hc2{
+
+    #hc2 {
         grid-area: hc2;
     }
-    #hc3{
+
+    #hc3 {
         grid-area: hc3;
     }
-    #hc4{
+
+    #hc4 {
         grid-area: hc4;
+    }
+
+    a {
+        display: block;
     }
 
     li {
@@ -64,9 +72,15 @@
 
         .home-card-button {
             display: flex;
+            padding-top: 16px;
             justify-content: center;
             align-items: center;
-            padding-top: 16px;
+
+            a {
+                height: 40px;
+                width: 40px;
+            }
+
         }
 
     }
@@ -111,9 +125,14 @@
 
         .flora-card-button {
             display: flex;
+            padding-top: 16px;
             justify-content: center;
             align-items: center;
-            padding-top: 16px;
+
+            a {
+                height: 40px;
+                width: 40px;
+            }
         }
 
     }
