--- a/dev/scss/sections/_cards.scss
+++ b/dev/scss/sections/_cards.scss
@@ -1,3 +1,18 @@
+
+.card-grid-global{
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-template-areas: ". global-grid .";
+
+    >div{
+        grid-area: global-grid;
+    }
+}
+
+
+
+
+
 #homepage-card-container {
     background-color: var(--blush-pink);
 }
