--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -5,4 +5,10 @@
 header{
     background-color: var(--dark-beige);
     width: 100%;
+
+    img{
+        padding: 16px;
+        width: 170px;
+    }
+
 }
