--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -1,3 +1,92 @@
 /* =============
     Navigation
 ============= */
+
+a:link, a:visited{
+    text-decoration: none;
+    transition: 0.25;
+}
+
+nav{
+    display: none;
+	background-color: var(--dark-beige);
+	height: 100vh;
+	padding: 16px;
+	position: fixed;
+	right: 0;
+	top: 0;
+	width: 100vw;
+    box-sizing: border-box;
+
+	@include lg {
+		background-color: var(--dark-beige);
+		display: block;
+		height: 100%;
+		padding: 0;
+		position: relative;
+		width: 100%;
+	}
+
+    aside{
+        display: flex;
+        justify-content: flex-end;
+
+        @include lg{
+            display: none;
+        }
+
+        button{
+            background-color: transparent;
+            border: none;
+            color: var(--bark-brown);
+        }
+    }
+
+    section{
+        display: flex;
+        justify-content: center;
+        margin-top: 10vh;
+
+        @include lg{
+            display: block;
+            margin-top: 0;
+            height: 100%;
+        }
+
+        ul{
+
+            @include lg{
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                height: 100%;
+            }
+        
+            li{
+
+                @include lg{
+                    margin-left: 16px;
+                }
+
+
+    
+                a:link, a:visited{
+                    text-decoration: none;
+                    transition: 0.25s;
+                    color: var(--bark-brown);
+                    padding: 16px;
+                    display: inline-block;
+                    font-size: rem-calc(20);
+                
+                    @include lg{
+                        font-size: rem-calc(20);
+                        padding: 0;
+                        font-weight: 300;
+                    }
+                }
+            }
+        }
+    }
+
+   
+}
