--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -449,6 +449,87 @@ textarea {
 /* =============
     Navigation
 ============= */
+a:link, a:visited {
+  text-decoration: none;
+  transition: 0.25;
+}
+
+nav {
+  display: none;
+  background-color: var(--dark-beige);
+  height: 100vh;
+  padding: 16px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100vw;
+  box-sizing: border-box;
+}
+@media (min-width: 1024px) {
+  nav {
+    background-color: var(--dark-beige);
+    display: block;
+    height: 100%;
+    padding: 0;
+    position: relative;
+    width: 100%;
+  }
+}
+nav aside {
+  display: flex;
+  justify-content: flex-end;
+}
+@media (min-width: 1024px) {
+  nav aside {
+    display: none;
+  }
+}
+nav aside button {
+  background-color: transparent;
+  border: none;
+  color: var(--bark-brown);
+}
+nav section {
+  display: flex;
+  justify-content: center;
+  margin-top: 10vh;
+}
+@media (min-width: 1024px) {
+  nav section {
+    display: block;
+    margin-top: 0;
+    height: 100%;
+  }
+}
+@media (min-width: 1024px) {
+  nav section ul {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
+  }
+}
+@media (min-width: 1024px) {
+  nav section ul li {
+    margin-left: 16px;
+  }
+}
+nav section ul li a:link, nav section ul li a:visited {
+  text-decoration: none;
+  transition: 0.25s;
+  color: var(--bark-brown);
+  padding: 16px;
+  display: inline-block;
+  font-size: 1.25rem;
+}
+@media (min-width: 1024px) {
+  nav section ul li a:link, nav section ul li a:visited {
+    font-size: 1.25rem;
+    padding: 0;
+    font-weight: 300;
+  }
+}
+
 /* =============
     Header
 ============= */
