--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -25,6 +25,7 @@ header {
         display: flex;
         justify-content: flex-end;
         align-items: center;
+        margin-right: 16px;
 
         @include lg {
             display: none;
