--- a/dev/scss/sections/_hero.scss
+++ b/dev/scss/sections/_hero.scss
@@ -3,7 +3,7 @@
     width: 100%;
 }
 
-#hero-text{
+.hero-text{
     padding: 24px 0 24px 0;
     font-weight: 600;
     font-size: rem-calc(18);
@@ -15,4 +15,11 @@
     @include lg{
         padding: 24px 200px;
     }
+}
+
+.hero-heading{
+    color: var(--bark-brown);
+    text-align: center;
+    font-size: rem-calc(40);
+    padding-top: 32px;
 }
