--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -22,3 +22,5 @@
 @import "sections/_hero";
 @import "sections/_cards";
 @import "sections/_about-us";
+@import "sections/_search";
+@import "sections/_shop";
