--- a/dev/scss/sections/_shop.scss
+++ b/dev/scss/sections/_shop.scss
@@ -1,7 +1,8 @@
 #flora-shop{
     background-color: var(--blush-pink);
+    padding: 16px 0;
 #flora-shop-content{
-margin: 16px 0;
+
 
     p {
         font-weight: 400;
