--- a/dev/scss/sections/_cards.scss
+++ b/dev/scss/sections/_cards.scss
@@ -113,12 +113,18 @@
         }
 
         .card-interior {
-            display: grid;
-            grid-template-columns: 50% auto;
+            @include lg{
+                display: grid;
+                grid-template-columns: 50% auto;
+            }
+            
 
 
             .right-side-card {
-                padding-left: 16px;
+                @include lg{
+                    padding-left: 16px;
+                }
+                
 
                 .right-side-button {
                     @include lg {
@@ -152,6 +158,7 @@
             height: 320px;
             object-fit: cover;
             padding-bottom: 16px;
+
         }
 
         h1 {
@@ -167,6 +174,9 @@
             font-size: rem-calc(16);
             line-height: rem-calc(24);
             color: var(--bark-brown);
+            @include md{
+                height: 200px;
+            }
         }
 
         .flora-card-button {
@@ -175,9 +185,27 @@
             justify-content: center;
             align-items: center;
 
+            @include md {
+                padding-top: 100px;
+                justify-content: end;
+            }
+
             a {
                 height: 40px;
                 width: 40px;
+            }
+        }
+
+        .flora-card-content {
+            @include md{
+                display: grid;
+                grid-template-columns: 50% auto;
+            }
+
+
+
+            .flora-card-right {
+                padding-left: 16px;
             }
         }
 
