--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -948,7 +948,7 @@ footer > div #rights {
 }
 @media (min-width: 768px) {
   #search #search-bar {
-    margin: 24px 0;
+    margin: 32px 0;
   }
 }
 #search #search-bar form {
@@ -971,14 +971,26 @@ footer > div #rights {
 
 #flora-shop {
   background-color: var(--blush-pink);
+}
+@media (min-width: 768px) {
+  #flora-shop {
+    display: grid;
+    grid-template-columns: 50% auto;
+    grid-template-areas: "shop-txt shop-img";
+  }
+}
+#flora-shop #flora-shop-content {
   padding: 16px 0;
+  grid-area: shop-txt;
+  display: flex;
+  align-items: center;
 }
 #flora-shop #flora-shop-content p {
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.5rem;
   color: var(--bark-brown);
-  margin-bottom: 16px;
+  padding-bottom: 16px;
 }
 #flora-shop #flora-shop-content #flora-shop-link {
   display: inline;
@@ -994,4 +1006,12 @@ footer > div #rights {
 #flora-shop #flora-shop-content #flora-shop-link img {
   vertical-align: middle;
   filter: brightness(0) saturate(100%) invert(22%) sepia(5%) saturate(4174%) hue-rotate(120deg) brightness(99%) contrast(82%);
+}
+#flora-shop #flora-shop-img {
+  grid-area: shop-img;
+}
+#flora-shop #flora-shop-img aside img {
+  height: 340px;
+  width: 100%;
+  object-fit: cover;
 }
