--- a/dev/scss/sections/_cards.scss
+++ b/dev/scss/sections/_cards.scss
@@ -141,7 +141,7 @@
 
 }
 
-#flora-cards {
+#flora-cards, #flora-cards-list {
     padding: 0;
     margin: 0;
     background-color: var(--blush-pink);
